TAC-541 - bugfix - column width text appearing behind scrollbar

--- a/public/channelgrabber/settings/scss/_invoiceDesigner.scss
+++ b/public/channelgrabber/settings/scss/_invoiceDesigner.scss
@@ -465,7 +465,7 @@ $indicator-border-color: #1477aa;
     }
     .heading-btn {
         float: right;
-        margin-right: 30px;
+        margin-right: 1rem;
         margin-top: -5px;
     }
 }
@@ -550,7 +550,8 @@ $indicator-border-color: #1477aa;
     float: left;
     clear: both;
     border-bottom: 1px solid $color-lgrey;
-    padding: 0px 15px 15px 15px;
+    padding: 0px 0px 15px 15px;
+    box-sizing: border-box;
     .inspector-group-holder {
         float: left;
         clear:both;
@@ -609,8 +610,6 @@ $indicator-border-color: #1477aa;
 .invoice-designer-drag-icon-container {
     display: flex;
     justify-content: center;
-    align-items: center;
-    position: absolute;
     background: #f3f3f3;
     cursor: grab;
     box-sizing: border-box;
@@ -629,7 +628,7 @@ $indicator-border-color: #1477aa;
     box-sizing: border-box;
 }
 .invoice-designer-input-positioner {
-    margin-left: 30px;
+    margin-left: 6px;
     margin-right: 6px;
 }
 .invoice-designer-drag-list-add-icon {
